--- a/api/api-facade/api-all/pom.xml
+++ b/api/api-facade/api-all/pom.xml
@@ -67,6 +67,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-facade-mail</artifactId>
+            <version>4.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-api-facade-messaging</artifactId>
             <version>4.0.0-SNAPSHOT</version>
         </dependency>
