--- a/api/api-facade/pom.xml
+++ b/api/api-facade/pom.xml
@@ -23,6 +23,7 @@
 		<module>api-tests</module>
 		<module>api-utils</module>
 		<module>api-io</module>
+		<module>api-mail</module>
 		<module>api-messaging</module>
 		<module>api-repository</module>
 		<module>api-indexing</module>
