--- a/api/api-javascript/api-all/pom.xml
+++ b/api/api-javascript/api-all/pom.xml
@@ -68,6 +68,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-javascript-mail</artifactId>
+            <version>4.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-api-javascript-messaging</artifactId>
             <version>4.0.0-SNAPSHOT</version>
         </dependency>
