--- a/api/api-javascript/pom.xml
+++ b/api/api-javascript/pom.xml
@@ -43,6 +43,7 @@
 		<module>api-security</module>
 		<module>api-database</module>
 		<module>api-io</module>
+		<module>api-mail</module>
 		<module>api-messaging</module>
 		<module>api-repository</module>
 		<module>api-indexing</module>
