--- a/pom.xml
+++ b/pom.xml
@@ -518,6 +518,7 @@
 		<license-maven-plugin.version>3.0</license-maven-plugin.version>
 		<persistence.api.version>2.2.2</persistence.api.version>
 		<jgit.version>5.5.0.201909110433-r</jgit.version>
+		<javax.mail.api.version>1.6.4</javax.mail.api.version>
 
 		<skip.tests>true</skip.tests>
 	</properties>
