--- a/modules/database/database-data-models/pom.xml
+++ b/modules/database/database-data-models/pom.xml
@@ -40,6 +40,11 @@
 			<version>4.3.0-SNAPSHOT</version>
     	</dependency>
     	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-database-api</artifactId>
+			<version>4.3.0-SNAPSHOT</version>
+    	</dependency>
+    	<dependency>
 		    <groupId>org.eclipse.persistence</groupId>
 		    <artifactId>jakarta.persistence</artifactId>
 		    <version>${persistence.api.version}</version>
