--- a/releng/sap-cf-all/src/main/resources/dirigible.properties
+++ b/releng/sap-cf-all/src/main/resources/dirigible.properties
@@ -12,5 +12,4 @@
 DIRIGIBLE_PRODUCT_NAME=${project.title}
 DIRIGIBLE_PRODUCT_VERSION=${project.version}
 DIRIGIBLE_PRODUCT_TYPE=all
-DIRIGIBLE_INSTANCE_NAME=anonymous
-DIRIGIBLE_DATABASE_PROVIDER=local
+DIRIGIBLE_INSTANCE_NAME=SAP Cloud Platform Cloud Foundry
