--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/details/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/details/index.html.template
@@ -17,7 +17,7 @@
 		<h1>Manage ${menuLabel}</h1>
 	</div>
 	<div class="container">
-		<button type="button" ng-click="openNewDialog()" class="btn btn-lg btn-primary pull-right table-header-button">New</button>
+		<button type="button" ng-click="openNewDialog()" class="btn btn-lg btn-outline-primary pull-right table-header-button"><i class="fa fa-plus" aria-hidden="true"></i></button>
 		<table class="table product-table">
 			<thead>
 				<tr>
