--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-list/details/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-list/details/index.html.template
@@ -92,7 +92,7 @@
 					</form>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+					<button type="button" class="btn" data-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
