--- a/templates/template-application-odata/src/main/resources/template-application-odata/odata/application.odata.template
+++ b/templates/template-application-odata/src/main/resources/template-application-odata/odata/application.odata.template
@@ -12,6 +12,15 @@
 #end
 #end
 #end
+#foreach ($model in $models)
+#if($model.type != "REPORT")
+#foreach ($property in $model.properties)
+#if($property.relationshipType == "ASSOCIATION" && $property.relationshipCardinality == "1_1")
+#set ($associationsCount = $associationsCount + 1)
+#end
+#end
+#end
+#end
 #if($odataNamespace)
 {
     "namespace": "${odataNamespace}",
@@ -51,8 +60,27 @@
 #end
 #end
 #end
+#foreach ($property in $model.properties)
+#if($property.relationshipType == "ASSOCIATION" && $property.relationshipCardinality == "1_1")
+#set ($haveNavigations = true)
+#set ($navigationsCount = $navigationsCount + 1)
+#end
+#end
 #if ($haveNavigations)
             "navigations": [
+#foreach ($property in $model.properties)
+#if($property.relationshipType == "ASSOCIATION" && $property.relationshipCardinality == "1_1")
+                {
+                    "name": "${property.relationshipEntityName}",
+                    "association": "${model.name}${property.relationshipEntityName}"
+#if($navigationsCount > 1)
+                },
+#set ($navigationsCount = $navigationsCount - 1)
+#else
+                }
+#end
+#end
+#end
 #foreach ($relationModel in $models)
 #if($relationModel.type != "REPORT" && $relationModel.name != $model.name)
 #foreach ($relationProperty in $relationModel.properties)
@@ -86,6 +114,32 @@
     "associations": []
 #else
     "associations": [
+#foreach ($model in $models)
+#if($model.type != "REPORT")
+#foreach ($property in $model.properties)
+#if($property.relationshipType == "ASSOCIATION" && $property.relationshipCardinality == "1_1")
+        {
+            "name": "${model.name}${property.relationshipEntityName}",
+            "from": {
+                "entity": "${model.name}",
+                "property": "${property.name}",
+                "multiplicity": "1"
+            },
+            "to": {
+                "entity": "${property.relationshipEntityName}",
+                "property": "#foreach ($relationModel in $models)#if($relationModel.name == $property.relationshipEntityName)#foreach ($relationProperty in $relationModel.properties)#if ($relationProperty.dataPrimaryKey || $relationProperty.dataPrimaryKey == "true")${relationProperty.name}#end#end#end#end",
+                "multiplicity": "1"
+            }
+#if($associationsCount > 1)
+        },
+#set ($associationsCount = $associationsCount - 1)
+#else
+        }
+#end
+#end
+#end
+#end
+#end
 #foreach ($model in $models)
 #if($model.type != "REPORT")
 #foreach ($relationModel in $models)
