--- a/modules/services/service-security/pom.xml
+++ b/modules/services/service-security/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>dirigible-api-facade-utils</artifactId>
             <version>5.4.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-facade-http</artifactId>
+            <version>5.4.0-SNAPSHOT</version>
+        </dependency>
         
         <dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
