--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <!--
 
+    =======================================================================
+    
     Copyright (c) 2010-2020 SAP and others.
     All rights reserved. This program and the accompanying materials
     are made available under the terms of the Eclipse Public License v2.0
@@ -9,7 +11,7 @@
     Contributors:
       SAP - initial API and implementation
 
-	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+	=======================================================================
 
 	Standard build:
 		mvn clean install
@@ -577,6 +579,7 @@
 		<jgit.version>5.5.0.201909110433-r</jgit.version>
 		<javax.mail.api.version>1.6.4</javax.mail.api.version>
 		<olingo.version>2.0.11</olingo.version>
+		<kafka.version>2.6.0</kafka.version>
 
 		<license.header.location>license-header.txt</license.header.location>
 
