--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -1,6 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
@@ -9,7 +8,7 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
-  <name>Releng - Desktop - All</name>
+	<name>Releng - Desktop - All</name>
 	<artifactId>dirigible-desktop-all</artifactId>
 	<packaging>jar</packaging>
 
@@ -74,8 +73,8 @@
 				</plugins>
 				<resources>
 					<resource>
-					  <directory>src/main/resources</directory>
-					  <filtering>true</filtering>
+						<directory>src/main/resources</directory>
+						<filtering>true</filtering>
 					</resource>
 				</resources>
 			</build>
@@ -120,7 +119,7 @@
 	</profiles>
 
 	<dependencies>
-	
+
 		<!-- Platform -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -129,73 +128,73 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-		    <groupId>ch.qos.logback</groupId>
-		    <artifactId>logback-core</artifactId>
-		    <version>${logback.version}</version>
-		    <scope>compile</scope>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
-		    <groupId>ch.qos.logback</groupId>
-		    <artifactId>logback-classic</artifactId>
-		    <version>${logback.version}</version>
-		    <scope>compile</scope>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+			<scope>compile</scope>
 		</dependency>
-	
+
 		<!-- Commons -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-commons-config</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-commons-config</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
-	
+
 		<!-- API -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-api</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Repository -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-repository</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-repository</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-repository-local</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-repository-local</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-repository-master</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-repository-master</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Database -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-database</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-database</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-database-h2</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-database-h2</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Core Services -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-core</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-core</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Services -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-services</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-services</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.eclipse.dirigible</groupId>
@@ -204,74 +203,84 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-service-anonymous</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
-		 </dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-service-anonymous</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-engine</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-engine</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- CMS -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-cms-api</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-cms-api</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-cms-internal</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-cms-internal</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
-		
+
 		<!-- BPM -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-bpm</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-bpm</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- IDE Plugins -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-ide</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-ide</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.eclipse.dirigible</groupId>
+					<artifactId>dirigible-ide-service-terminal</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.eclipse.dirigible</groupId>
+					<artifactId>dirigible-ide-ui-terminal</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- Templates Plugins -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-templates</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-templates</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Resources Plugins -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-resources</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-resources</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- External API modules -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-ext</artifactId>
-		 	<version>5.12.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-ext</artifactId>
+			<version>5.12.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- External -->
 		<dependency>
-		  <groupId>javax.annotation</groupId>
-		  <artifactId>jsr250-api</artifactId>
-		  <version>${jsr250-api.version}</version>
+			<groupId>javax.annotation</groupId>
+			<artifactId>jsr250-api</artifactId>
+			<version>${jsr250-api.version}</version>
 		</dependency>
 		<dependency>
-		    <groupId>commons-fileupload</groupId>
-		    <artifactId>commons-fileupload</artifactId>
-		    <version>1.3.3</version>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
 		</dependency>
 
 		<!-- External - Jetty -->
