--- a/modules/odata/odata-core/pom.xml
+++ b/modules/odata/odata-core/pom.xml
@@ -16,22 +16,23 @@
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
+        	
             <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${custom.java.build.version}</source>
+					<target>${custom.java.build.version}</target>
 					<debug>true</debug>
 					<debuglevel>lines,vars,source</debuglevel>
 				</configuration>
 			</plugin>
+			<!-- Required when the java build version is 1.8  -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<configuration>
-					<source>8</source>
 					<detectJavaApiLink>false</detectJavaApiLink>
 				</configuration>
 			</plugin>
@@ -195,6 +196,8 @@
     </dependencies>
 
     <properties>
+    	<!-- Required to enable usage in projects that run on java 1.8  -->
+    	<custom.java.build.version>1.8</custom.java.build.version>
         <license.header.location>../../../license-header.txt</license.header.location>
     </properties>
 </project>
