--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         java-version: 13
     - name: Maven Build
-      run: mvn clean install
+      run: mvn clean install -Dmaven.javadoc.skip=true
     - name: Docker Login
       run: docker login -u ${{secrets.DOCKER_USER}} -p ${{secrets.DOCKER_PASSWORD}}
     - name: Push Anonymous
