--- a/modules/bpm/bpm-flowable/pom.xml
+++ b/modules/bpm/bpm-flowable/pom.xml
@@ -109,6 +109,18 @@
 			<version>6.0.0-SNAPSHOT</version>
 			<scope>test</scope>
     	</dependency>
+		<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-facade-core</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+    	</dependency>
+		<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-javascript-core</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+    	</dependency>
     	
 		<dependency>
 		    <groupId>com.h2database</groupId>
