--- a/modules/core/core-generation-javascript/pom.xml
+++ b/modules/core/core-generation-javascript/pom.xml
@@ -48,6 +48,18 @@
 			<version>6.0.0-SNAPSHOT</version>
 			<scope>test</scope>
     	</dependency>
+		<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-facade-core</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+    	</dependency>
+		<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-javascript-core</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+    	</dependency>
     	<dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-repository-local</artifactId>
