--- a/api/api-facade/api-core/pom.xml
+++ b/api/api-facade/api-core/pom.xml
@@ -61,6 +61,12 @@
 			<version>5.12.1</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-engine-command</artifactId>
+            <version>5.12.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
 	</dependencies>
 
