--- a/pom.xml
+++ b/pom.xml
@@ -562,6 +562,18 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>${powermock-module-junit4.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<version>${powermock-api-mockito2.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
 			<version>${hamcrest.all.version}</version>
@@ -588,6 +600,8 @@
 		<gson.version>2.2.4</gson.version>
 		<guice.version>4.2.2</guice.version>
 		<mockito.version>2.23.0</mockito.version>
+		<powermock-api-mockito2.version>2.0.2</powermock-api-mockito2.version>
+		<powermock-module-junit4.version>2.0.2</powermock-module-junit4.version>
 		<junit.version>4.13.1</junit.version>
 		<hamcrest.all.version>1.3</hamcrest.all.version>
 		<retrofit.version>1.8.0</retrofit.version>
