--- a/ide/ui/ide-csv/pom.xml
+++ b/ide/ui/ide-csv/pom.xml
@@ -21,7 +21,8 @@
     <properties>
         <content.repository.name>ide-csv</content.repository.name>
         <content.project.name>ide-csv</content.project.name>
-        <content.scm.branch>main</content.scm.branch>
+        
+        <scmVersion>main</scmVersion>
 
         <content.scm.url>https://github.com/dirigiblelabs/${content.repository.name}</content.scm.url>
         <content.scm.connection>scm:git:git://github.com/dirigiblelabs/${content.repository.name}.git</content.scm.connection>
