--- a/pom.xml
+++ b/pom.xml
@@ -578,6 +578,7 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<maven.scm.plugin.version>1.11.2</maven.scm.plugin.version>
+		<scmVersionType>branch</scmVersionType>
 		<commons.io>2.7</commons.io>
 		<commons.codec>1.10</commons.codec>
 		<commons.lang3>3.9</commons.lang3>
