--- a/resources/resources-all/pom.xml
+++ b/resources/resources-all/pom.xml
@@ -118,5 +118,46 @@
 		    <artifactId>fontawesome</artifactId>
 		    <version>4.7.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>angularjs</artifactId>
+		    <version>1.4.7</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap</artifactId>
+		    <version>3.3.7</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.webjars.npm</groupId>
+		    <artifactId>golden-layout</artifactId>
+		    <version>1.5.9</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>jqplot</artifactId>
+		    <version>1.0.8r1250</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>jquery</artifactId>
+		    <version>3.4.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>jquery-ui</artifactId>
+		    <version>1.12.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.webjars.npm</groupId>
+		    <artifactId>jstree</artifactId>
+		    <version>3.3.4</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>requirejs</artifactId>
+		    <version>2.3.6</version>
+		    <scope>runtime</scope>
+		</dependency>
 	</dependencies>
 </project>
